--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Score Board</title>
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="stylesheet" href="./screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <script src="/main.js" charset="utf-8"></script>
+    
+      <header> <h1> My Score Board </h1> </header>
+
+      <div class="flex">
+        <section class="team-one">
+        <h4> Team 1 </h4>
+        <h1 >0</h1>
+        <h4>Update Team 1 Name</h4>
+        <input >
+        <button>Update</button>
+
+         <h4>Update Team 1 Score</h4>
+        <button>Add 1</button>
+        <button>Subtract 1</button>
+        </section>
+
+        <section class="team-two">
+        <h4 >Team 2</h4>
+        <h1 >0</h1>
+        <h4> Update Team 2 Name </h4>
+        <input >
+        <button> Update </button>
+
+        <h4>Update Team 2 Score </h4>
+        <button>Add 1</button>
+        <button> Subtract 1</button>
+         </section>
+    </div>
+
+    
+  
+
+    <script src="./main.js" charset="utf-8"></script>
+
   </body>
 </html>
